@@ -1140,19 +1140,34 @@ function switch_mute(icon) {
 function createPlaceholders() {
 	if (IE) {
 		jQuery(document).ready(function() {
-			jQuery('[placeholder]').focus(function() {
-				var obj = jQuery(this);
-				if (obj.val() == obj.attr('placeholder')) {
-					obj.val('');
-					obj.removeClass('placeholder');
-				}
-			}).blur(function() {
-				var obj = jQuery(this);
-				if (obj.val() == '' || obj.val() == obj.attr('placeholder')) {
-					obj.val(obj.attr('placeholder'));
-					obj.addClass('placeholder');
-				}
-			}).blur();
+			jQuery('[placeholder]')
+				.focus(function() {
+					var obj = jQuery(this);
+
+					if (obj.val() == obj.attr('placeholder')) {
+						obj.val('');
+						obj.removeClass('placeholder');
+					}
+				})
+				.blur(function() {
+					var obj = jQuery(this);
+
+					if (obj.val() == '' || obj.val() == obj.attr('placeholder')) {
+						obj.val(obj.attr('placeholder'));
+						obj.addClass('placeholder');
+					}
+				})
+				.blur();
+
+			jQuery('form').submit(function() {
+				jQuery('.placeholder').each(function() {
+					var obj = jQuery(this);
+
+					if (obj.val() == obj.attr('placeholder')) {
+						obj.val('');
+					}
+				});
+			});
 		});
 	}
 }
